--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "web-page",
+  "homepage": "https://dm2greenfinancing.github.io/web-page/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "antd": "^4.19.5",
     "cra-template": "1.1.3",
+    "gh-pages": "^3.2.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
@@ -14,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
